--- a/packages/contracts/tsconfig.json
+++ b/packages/contracts/tsconfig.json
@@ -21,6 +21,7 @@
   "include": [
     "./hardhat.config.ts",
     "./index.ts",
+    "utils/**/*.json",
     "deploy/**/*.ts",
     "typechain/**/*.ts",
     "utils/**/*.ts",
