--- a/packages/assets/package.json
+++ b/packages/assets/package.json
@@ -11,6 +11,7 @@
   },
   "devDependencies": {
     "@types/node": "^17.0.8",
+    "ipfs-http-client": "^55.0.0",
     "rimraf": "^3.0.2",
     "typescript": "^4.5.4"
   },
