--- a/packages/ipfs/tsconfig.json
+++ b/packages/ipfs/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "composite": true,
-    "lib": ["ES2020"],
+    "lib": ["ES2018", "DOM"],
     "module": "esnext",
     "moduleResolution": "node",
     "strict": true,
