--- a/packages/www/package.json
+++ b/packages/www/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "ethers": "^5.5.3",
+    "ipfs-http-client": "^55.0.0",
     "next": "12.0.7",
     "react": "17.0.2",
     "react-dom": "17.0.2",
