--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -9,10 +9,12 @@
   },
   "devDependencies": {
     "@types/node": "^17.0.8",
+    "ipfs-http-client": "^55.0.0",
     "rimraf": "^3.0.2",
     "typescript": "^4.5.4"
   },
   "dependencies": {
+    "@ipld/dag-pb": "^2.1.15",
     "ethers": "^5.5.3"
   }
 }
