IPFS based metadata update

--- a/packages/shared/tsconfig.json
+++ b/packages/shared/tsconfig.json
@@ -19,7 +19,7 @@
     "outDir": "./dist",
     "rootDir": "./src"
   },
-  "include": ["src/**/*.ts"],
+  "include": ["src/**/*.ts", "src/**/*.json"],
   "exclude": ["node_modules"],
   "references": [
     {
