--- a/packages/assets/package.json
+++ b/packages/assets/package.json
@@ -6,12 +6,19 @@
   "type": "module",
   "scripts": {
     "build": "tsc --build",
-    "generate:notebook": "jupyter nbconvert --to notebook --execute python/generate.ipynb",
-    "assets:upload": "yarn build && node ./dist/copy-assets.js"
+    "assets:upload": "yarn build && node ./dist/copy-assets.js",
+    "assets:test": "yarn build && node ./dist/generate.js"
   },
   "devDependencies": {
+    "@napi-rs/canvas": "^0.1.19",
+    "@types/cli-progress": "^3.9.2",
+    "@types/color-name": "^1.1.1",
     "@types/node": "^17.0.8",
+    "@types/node-emoji": "^1.8.1",
+    "cli-progress": "^3.10.0",
+    "color-name": "^1.1.4",
     "ipfs-http-client": "^55.0.0",
+    "node-emoji": "^1.11.0",
     "rimraf": "^3.0.2",
     "typescript": "^4.5.4"
   },
