--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -9,7 +9,7 @@
   "private": true,
   "scripts": {
     "build": "tsc --build",
-    "start:dev": "concurrently \"nodemon --inspect --enable-source-maps  --experimental-json-modules -w dist -w .env dist/index.js\" \"yarn build --watch --preserveWatchOutput\""
+    "start:dev": "concurrently \"NETWORK=localhost nodemon --inspect --enable-source-maps  --experimental-json-modules -w dist -w .env dist/index.js\" \"yarn build --watch --preserveWatchOutput\""
   },
   "dependencies": {
     "cross-env": "^7.0.3",
