--- a/packages/ipfs/package.json
+++ b/packages/ipfs/package.json
@@ -6,7 +6,7 @@
   "types": "dist/index.d.ts",
   "private": true,
   "scripts": {
-    "daemon": "node daemon.js",
+    "daemon": "yarn build && node daemon.js",
     "build": "tsc --build"
   },
   "dependencies": {
