--- a/packages/backend/tsconfig.json
+++ b/packages/backend/tsconfig.json
@@ -19,12 +19,9 @@
     "outDir": "./dist",
     "rootDir": "./src"
   },
-  "include": ["src/**/*.ts"],
+  "include": ["src/**/*.ts", "src/**/*.json"],
   "exclude": ["node_modules"],
   "references": [
-    {
-      "path": "../shared"
-    },
     {
       "path": "../contracts"
     },
