--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -9,25 +9,33 @@
   "private": true,
   "scripts": {
     "build": "tsc --build",
+    "compile": "waffle",
+    "test": "NODE_ENV=test mocha",
     "start:dev": "concurrently --kill-others -i \"NETWORK=localhost nodemon --inspect --enable-source-maps  --experimental-json-modules -w dist  -w ../../node_modules/@creaturenft/web3/dist -w .env dist/index.js\" \"yarn build --watch --preserveWatchOutput\""
   },
   "dependencies": {
+    "@typechain/ethers-v5": "^9.0.0",
     "cross-env": "^7.0.3",
     "dotenv": "^14.0.1",
     "ethers": "^5.5.3",
     "express": "^4.17.2",
     "ipfs-http-client": "^55.0.0",
     "nodemon": "^2.0.15",
-    "sqlite3": "^5.0.2"
+    "sqlite3": "^5.0.2",
+    "typechain": "^7.0.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.8",
     "@types/sqlite3": "^3.1.8",
+    "chai": "^4.3.6",
     "concurrently": "^7.0.0",
     "eslint": "^8.6.0",
+    "ethereum-waffle": "^3.4.0",
+    "mocha": "^9.2.0",
     "prettier": "^2.5.1",
     "rimraf": "^3.0.2",
+    "sinon": "^13.0.1",
     "ts-node": "^10.4.0",
     "typescript": "^4.5.4"
   }
