--- a/packages/backend/package.json
+++ b/packages/backend/package.json
@@ -8,12 +8,14 @@
   "license": "MIT",
   "private": true,
   "scripts": {
-    "build": "tsc --build",
-    "compile": "waffle",
+    "build": "yarn compile && tsc --build",
+    "compile": "waffle && yarn compile:typechain",
     "test": "NODE_ENV=test mocha",
-    "start:dev": "concurrently --kill-others -i \"NETWORK=localhost nodemon --inspect --enable-source-maps  --experimental-json-modules -w dist  -w ../../node_modules/@creaturenft/web3/dist -w .env dist/index.js\" \"yarn build --watch --preserveWatchOutput\""
+    "compile:typechain": "typechain --target ethers-v5 --out-dir src/typechain --glob src/artifacts/*.json",
+    "start:dev": "concurrently --kill-others -i \"nodemon --inspect --enable-source-maps  --experimental-json-modules -w dist  -w ../../node_modules/@creaturenft/web3/dist -w .env dist/index.js\" \"yarn build --watch --preserveWatchOutput\""
   },
   "dependencies": {
+    "@maticnetwork/maticjs-ethers": "^1.0.1",
     "@typechain/ethers-v5": "^9.0.0",
     "cross-env": "^7.0.3",
     "dotenv": "^14.0.1",
@@ -25,6 +27,7 @@
     "typechain": "^7.0.0"
   },
   "devDependencies": {
+    "@maticnetwork/maticjs": "^3.2.2",
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.8",
     "@types/sqlite3": "^3.1.8",
@@ -36,7 +39,7 @@
     "prettier": "^2.5.1",
     "rimraf": "^3.0.2",
     "sinon": "^13.0.1",
-    "ts-node": "^10.4.0",
+    "ts-node": "^10.5.0",
     "typescript": "^4.5.4"
   }
 }
