--- a/packages/contracts/package.json
+++ b/packages/contracts/package.json
@@ -26,6 +26,7 @@
     "@ethersproject/bytes": "^5.0.0",
     "@ethersproject/hardware-wallets": "^5.0.14",
     "@ethersproject/providers": "^5.0.0",
+    "@maticnetwork/maticjs": "^3.2.2",
     "@nomiclabs/hardhat-ethers": "^2.0.4",
     "@nomiclabs/hardhat-etherscan": "^3.0.0",
     "@nomiclabs/hardhat-waffle": "^2.0.1",
